Fix 'Library Access' being visible on load even when 'Enable User Creation' is disabled
The visibility of Library Access wasn't being set during load based
on the Enable User Creation state; instead it was only updating on change.

Moved the code into a helper function for the event handler and call it
during creation.

Signed-off-by: James Ketrenos <james_github@ketrenos.com>

--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -163,6 +163,11 @@
                         });
                     });
 
+                    const updateFolderListVisibility = () => {
+                        document.querySelector('.folderAccessContainer').style.display =
+                            LdapConfigurationPage.chkEnableUserCreation.checked ? 'block' : 'none';
+                    }
+
                     function loadMediaFolders(config) {
                       if (!LdapConfigurationPage.folderAccessList) {
                         return Promise.resolve();
@@ -188,9 +193,8 @@
                         html += '</div>';
                         LdapConfigurationPage.folderAccessList.innerHTML = html;
                         /* Only show these options if Jellyfin user creation is enabled on successful LDAP authentication */
-                        LdapConfigurationPage.chkEnableUserCreation.addEventListener('change', (event) => {
-                          document.querySelector('.folderAccessContainer').style.display = event.currentTarget.checked ? 'block' : 'none';
-                        });
+                        updateFolderListVisibility();
+                        LdapConfigurationPage.chkEnableUserCreation.addEventListener('change', updateFolderListVisibility);
                         /* Set up event handlers for tracking folder enabling/disabling */
                         Array.prototype.forEach.call(document.querySelectorAll('#folderList input'), (folder) => {
                           folder.addEventListener('change', (event) => {
