Prevent 'pageshow' from executing when LDAP-Auth isn't the active page
The 'pageshow' handler is executing any time any page is loaded. This
patch adds an event filter at the start of 'pageshow' to only execute
if the LDAP-Auth page is active.

Signed-off-by: James Ketrenos <james_github@ketrenos.com>

--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -137,6 +137,11 @@
             if (!window.ldapInitialized) {
                 window.ldapInitialized = true;
                 window.addEventListener("pageshow", function (_) {
+                    /* Only take action if the page being shown is 'LDAP-Auth' */
+                    if (!event.detail || !event.detail.params || !event.detail.params.name || event.detail.params.name != 'LDAP-Auth') {
+                        return;
+                    }
+ 
                     Dashboard.showLoadingMsg();
 
                     window.ApiClient.getPluginConfiguration(LdapConfigurationPage.pluginUniqueId).then(function (config) {
