Fix #80 Update administrative privileges based on LDAP admin filter
If an AdminFilter is set, and if the current user's admin access
does not match the state of that filter applied to that user, update
their status.

NOTE: If an AdminFilter is *not* set, no existing users will have
their access changed.

Signed-off-by: James Ketrenos <james_github@ketrenos.com>

--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -63,7 +63,9 @@
                             <div class="inputContainer fldExternalAddressFilter">
                                 <input is="emby-input" type="text" id="txtLdapAdminFilter" label="LDAP Admin Filter:" />
                                 <div class="fieldDescription">The LDAP search filter to find administrative users for Jellyfin, e.g. (objectClass=JellyfinAdministrator).
-                                  If blank, administrative state must be configured manually for each user. Applies only to new Jellyfin users on first LDAP authentication.
+                                  If left blank, administrative state must be configured manually for each user. If set, administrative access will automatically be applied
+                                  (either granting or removing administrative access) when the LDAP user next logs in. If the user is currently logged in, this filter will 
+                                  not change their active session permissions.
                                 </div>
                             </div>
                             <div class="inputContainer fldExternalAddressFilter">
