add toggle for password reset

--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -21,6 +21,13 @@
                             </div>
                             <div class="checkboxContainer checkboxContainer-withDescription">
                                 <label>
+                                    <input type="checkbox" is="emby-checkbox" id="chkAllowPassReset" />
+                                    <span>Allow Password Reset:</span>
+                                </label>
+                                <div class="fieldDescription checkboxFieldDescription">Allow users to us Password Reset flow.</div>
+                            </div>
+                            <div class="checkboxContainer checkboxContainer-withDescription">
+                                <label>
                                     <input type="checkbox" is="emby-checkbox" id="chkUseSsl" />
                                     <span>Secure LDAP:</span>
                                 </label>
