minor doc changes
added message indicating a privileged bind user is required to use the password reset

--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -50,7 +50,7 @@
                                         <input type="checkbox" is="emby-checkbox" id="chkAllowPassChange" />
                                         <span>Allow Password Change</span>
                                     </label>
-                                    <div class="fieldDescription checkboxFieldDescription">Allow users to change password.</div>
+                                    <div class="fieldDescription checkboxFieldDescription">Allow users to change password (Requires privileged bind user).</div>
                                 </div>
                                 <div class="inputContainer fldExternalAddressFilter">
                                     <input is="emby-input" type="text" id="txtLdapPasswordResetUrl" label="Password Reset Url:" />
